test/conformance/chainsaw/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-delete-rule/cloned.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-nosync-delete-rule
type: Opaque
---
apiVersion: v1
data:
  color: yellow
kind: ConfigMap
metadata:
  namespace: cpol-clone-nosync-delete-rule
  name: mytestcm
