test/conformance/chainsaw/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-delete-rule/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-nosync-delete-rule
