test/conformance/chainsaw/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-delete-rule/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-nosync-clone
spec:
  rules:
  - name: clone-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      apiVersion: v1
      kind: Secret
      name: regcred
      namespace: "{{request.object.metadata.name}}"
      synchronize: false
      clone:
        namespace: default
        name: regcred
  - name: clone-configmap
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      apiVersion: v1
      kind: ConfigMap
      name: mytestcm
      namespace: "{{request.object.metadata.name}}"
      synchronize: false
      clone:
        namespace: default
        name: mytestcm
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: default
type: Opaque
---
apiVersion: v1
data:
  color: yellow
kind: ConfigMap
metadata:
  namespace: default
  name: mytestcm
